# gpu-raytracer

./: .gitignore  CMakeLists.txt  README.md  apt-get.sh  compute.cpp  compute.h  hello.cl  main.cpp
cmake/: FindOpenCL.cmake
include/CL/: cl_gl.h
kernels/: glow.cl  trace.cl  xy.cl
